// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select Component > Select Snapshots > should match snapshot with custom content 1`] = `
<div>
  <div
    data-testid="select-root"
  >
    <button
      class="flex h-9 w-full items-center justify-between whitespace-nowrap rounded-md border border-input bg-transparent px-3 py-2 text-sm shadow-sm ring-offset-background placeholder:text-muted-foreground focus:outline-none disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1"
      data-testid="select-trigger"
    >
      <span
        data-testid="select-value"
      />
      <span
        data-testid="select-icon"
      >
        <div
          data-testid="chevron-down-icon"
        />
      </span>
    </button>
    <div
      data-testid="select-portal"
    >
      <div
        class="relative z-50 max-h-96 min-w-[8rem] overflow-hidden rounded-md border bg-popover text-popover-foreground shadow-md data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 data-[side=bottom]:translate-y-1 data-[side=left]:-translate-x-1 data-[side=right]:translate-x-1 data-[side=top]:-translate-y-1"
        data-testid="select-content"
        position="popper"
      >
        <div
          class="flex cursor-default items-center justify-center py-1"
          data-testid="select-scroll-up-button"
        >
          <div
            data-testid="chevron-up-icon"
          />
        </div>
        <div
          class="p-1 h-[var(--radix-select-trigger-height)] w-full min-w-[var(--radix-select-trigger-width)]"
          data-testid="select-viewport"
        >
          <div
            class="relative flex w-full cursor-default select-none items-center rounded-sm py-1.5 pl-2 pr-8 text-sm outline-none focus:bg-secondary focus:text-accent-foreground data-[disabled]:pointer-events-none data-[disabled]:opacity-50"
            data-testid="select-item"
            value="custom"
          >
            <span
              class="absolute right-2 flex h-3.5 w-3.5 items-center justify-center"
            >
              <span
                data-testid="select-item-indicator"
              >
                <div
                  data-testid="check-icon"
                />
              </span>
            </span>
            <span
              data-testid="select-item-text"
            >
              Custom Item
            </span>
          </div>
        </div>
        <div
          class="flex cursor-default items-center justify-center py-1"
          data-testid="select-scroll-down-button"
        >
          <div
            data-testid="chevron-down-icon"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select Component > Select Snapshots > should match snapshot with default props 1`] = `
<div>
  <div
    data-testid="select-root"
  >
    <button
      class="flex h-9 w-full items-center justify-between whitespace-nowrap rounded-md border border-input bg-transparent px-3 py-2 text-sm shadow-sm ring-offset-background placeholder:text-muted-foreground focus:outline-none disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1"
      data-testid="select-trigger"
    >
      <span
        data-testid="select-value"
      />
      <span
        data-testid="select-icon"
      >
        <div
          data-testid="chevron-down-icon"
        />
      </span>
    </button>
    <div
      data-testid="select-portal"
    >
      <div
        class="relative z-50 max-h-96 min-w-[8rem] overflow-hidden rounded-md border bg-popover text-popover-foreground shadow-md data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[side=bottom]:slide-in-from-top-2 data-[side=left]:slide-in-from-right-2 data-[side=right]:slide-in-from-left-2 data-[side=top]:slide-in-from-bottom-2 data-[side=bottom]:translate-y-1 data-[side=left]:-translate-x-1 data-[side=right]:translate-x-1 data-[side=top]:-translate-y-1"
        data-testid="select-content"
        position="popper"
      >
        <div
          class="flex cursor-default items-center justify-center py-1"
          data-testid="select-scroll-up-button"
        >
          <div
            data-testid="chevron-up-icon"
          />
        </div>
        <div
          class="p-1 h-[var(--radix-select-trigger-height)] w-full min-w-[var(--radix-select-trigger-width)]"
          data-testid="select-viewport"
        >
          <div
            data-testid="select-group"
          >
            <div
              class="px-2 py-1.5 text-sm font-semibold"
              data-testid="select-label"
            >
              Fruits
            </div>
            <div
              class="relative flex w-full cursor-default select-none items-center rounded-sm py-1.5 pl-2 pr-8 text-sm outline-none focus:bg-secondary focus:text-accent-foreground data-[disabled]:pointer-events-none data-[disabled]:opacity-50"
              data-testid="select-item"
              value="apple"
            >
              <span
                class="absolute right-2 flex h-3.5 w-3.5 items-center justify-center"
              >
                <span
                  data-testid="select-item-indicator"
                >
                  <div
                    data-testid="check-icon"
                  />
                </span>
              </span>
              <span
                data-testid="select-item-text"
              >
                Apple
              </span>
            </div>
            <div
              class="relative flex w-full cursor-default select-none items-center rounded-sm py-1.5 pl-2 pr-8 text-sm outline-none focus:bg-secondary focus:text-accent-foreground data-[disabled]:pointer-events-none data-[disabled]:opacity-50"
              data-testid="select-item"
              value="banana"
            >
              <span
                class="absolute right-2 flex h-3.5 w-3.5 items-center justify-center"
              >
                <span
                  data-testid="select-item-indicator"
                >
                  <div
                    data-testid="check-icon"
                  />
                </span>
              </span>
              <span
                data-testid="select-item-text"
              >
                Banana
              </span>
            </div>
            <div
              class="-mx-1 my-1 h-px bg-muted"
              data-testid="select-separator"
            />
            <div
              class="relative flex w-full cursor-default select-none items-center rounded-sm py-1.5 pl-2 pr-8 text-sm outline-none focus:bg-secondary focus:text-accent-foreground data-[disabled]:pointer-events-none data-[disabled]:opacity-50"
              data-testid="select-item"
              value="orange"
            >
              <span
                class="absolute right-2 flex h-3.5 w-3.5 items-center justify-center"
              >
                <span
                  data-testid="select-item-indicator"
                >
                  <div
                    data-testid="check-icon"
                  />
                </span>
              </span>
              <span
                data-testid="select-item-text"
              >
                Orange
              </span>
            </div>
          </div>
        </div>
        <div
          class="flex cursor-default items-center justify-center py-1"
          data-testid="select-scroll-down-button"
        >
          <div
            data-testid="chevron-down-icon"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
